--- a/index2.html
+++ b/index2.html
@@ -9,8 +9,23 @@
 <style>
   body {
     font-family: 'Poppins', sans-serif;
+    position: relative;
+    min-height: 100vh;
+    margin: 0;
+  }
+
+  /* Background image layer */
+  body::before {
+    content: "";
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
     background: url('https://images.unsplash.com/photo-1519389950473-47ba0277781c') no-repeat center center fixed;
     background-size: cover;
+    opacity: 0.3; /* 30% opacity */
+    z-index: -1; /* Keep it behind everything */
   }
 </style>
 </head>
